fixed layout issues

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,5 +1,32 @@
 @import '_global.scss';
 
+#test {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.video-view {
+    display: flex;
+    position: relative;
+    width: 500px;
+    height: 300px;
+     .video {
+        position: absolute;
+         width: 100%;
+         height: 100%;
+       object-fit: cover;
+       background-color: #ccc;
+     }
+     .video-content {
+        width: 100%;
+        margin: 5px; //margin around button container
+        align-self: flex-end;
+        z-index: 1;
+        .btn {
+            align-self: flex-end;
+        }
+      }
+  }
 //
 // custom styles must be placed near
 // bottom to overwrite default styles
